--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -13,4 +13,4 @@ jobs:
       - name: View issue information
         run: |
           echo "Issue title: ${{ github.event.issue.title }}"
-          echo "Issue body: ${{ github.event.issue.body }}"
+          echo "Issue body: ${{ toJson(github.event.issue.body) }}"
