--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -9,6 +9,15 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
+      
+      # NPM PACKAGES
+      - uses: actions/cache@v2
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
+      - name: Install Yarn dependencies in root
+        run: yarn
 
       - uses: actions/github-script@v4
         with:
