--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -19,9 +19,29 @@ jobs:
       - name: Install Yarn dependencies in root
         run: yarn
 
+      # ASDF TOOLS
+      - name: Install asdf
+        uses: asdf-vm/actions/setup@v1
+      - name: Cache tools
+        uses: actions/cache@v2
+        with:
+          path: |
+            /home/runner/.asdf
+          key: ${{ runner.os }}-${{ hashFiles('**/.tool-versions') }}
+      - name: Install required tools
+        run: |
+          cat .tool-versions | cut -f 1 -d ' ' | xargs -n 1 asdf plugin-add || true
+          asdf plugin-update --all
+          asdf install
+          asdf reshim
+      - name: Install python tools
+        run: |
+          pip install -r requirements.txt
+          asdf reshim
+
       - uses: actions/github-script@v4
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const script = require('./github-script.js')
-            console.log(script({github, context}))
+            console.log(await script({github, context}))
