--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/junminahn/testteste#readme",
   "dependencies": {
     "exec-sh": "^0.4.0",
+    "execa": "^5.1.1",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21"
   }
