--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "exec-sh": "^0.4.0",
     "execa": "^5.1.1",
     "js-yaml": "^4.1.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "mustache": "^4.2.0"
   }
 }
