--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -2,7 +2,10 @@ name: Create and publish a Docker image
 
 on:
   push:
-    branches: ["example"]
+    branches:
+      - example
+    tags:
+      - "*"
 
 env:
   REGISTRY: ghcr.io
