--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,3 +7,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: hmarr/debug-action@v2
+      if: contains(github.event.pull_request.labels.*.name, 'bug')
