--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -9,3 +9,14 @@ jobs:
     steps:
     - uses: hmarr/debug-action@v2
       if: contains(github.event.pull_request.labels.*.name, 'bug')
+
+    - name: Get PR
+      id: pr
+      run: |
+        pr=$(curl -H "Accept: application/vnd.github.groot-preview+json" ${{github.event.pull_request._links.issue.href}})
+        echo "::set-output name=pr::$pr"
+
+    - name: Get PR2
+      id: pr2
+      run: |
+        echo ${{ steps.pr.outputs.pr }}
