--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -7,6 +7,17 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+      - name: copy file via ssh password
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.KEY }}
+          port: ${{ secrets.PORT }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          source: "testfolder/*"
+          target: "testaaa"
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@master
         with:
