--- a/.github/workflows/testminify.yml
+++ b/.github/workflows/testminify.yml
@@ -1,4 +1,4 @@
-name: Create and publish a Docker image
+name: Test minify action
 
 on:
   push
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Test minify
+      - name: log1
         run: |
           cat minify-test/test.js
           cat minify-test/test.css
@@ -20,7 +20,7 @@ jobs:
         with:
           directory: minify-test
 
-      - name: Test minify2
+      - name: log2
         run: |
           cat minify-test/test.js
           cat minify-test/test.css
