--- a/.github/workflows/fetch-json.yml
+++ b/.github/workflows/fetch-json.yml
@@ -17,8 +17,8 @@ jobs:
           echo $releaseDate
           workflow=$(echo ".github/workflows/terraform-apply.yml" | cut -d/ -f3)
           workflow=$(echo "${{ github.workflow }}" | cut -d/ -f3)
-          echo "https://api.github.com/repos/${{github.repository.full_name}}/actions/workflows/${{workflow}}/runs?status=in_progress"
-          runs=$(curl -H "Accept: application/vnd.github.groot-preview+json" https://api.github.com/repos/${{github.repository.full_name}}/actions/workflows/${{workflow}}/runs?status=in_progress)
+          echo "https://api.github.com/repos/${{github.repository.full_name}}/actions/workflows/$workflow/runs?status=in_progress"
+          runs=$(curl -H "Accept: application/vnd.github.groot-preview+json" "https://api.github.com/repos/${{github.repository.full_name}}/actions/workflows/$workflow/runs?status=in_progress")
           count=$(jq ".[0].total_count" <<< "$runs")
           echo "$count"
           echo "::set-output name=count::$count"
