--- a/.github/workflows/fetch-json.yml
+++ b/.github/workflows/fetch-json.yml
@@ -7,15 +7,14 @@ jobs:
   terraform:
     runs-on: ubuntu-18.04
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - uses: hmarr/debug-action@v2
+      - uses: actions/checkout@v2
 
       - name: Check if Action Runs Already
         id: action
         run: |
           releaseDate=$(date '+%B-%-d-%Y' | tr '[:upper:]' '[:lower:]')
           echo $releaseDate
-          workflow=$(echo ".github/workflows/terraform-apply.yml" | cut -d/ -f3)
           workflow=$(echo "${{ github.workflow }}" | cut -d/ -f3)
           echo "https://api.github.com/repos/${{github.repository.full_name}}/actions/workflows/$workflow/runs?status=in_progress"
           runs=$(curl -H "Accept: application/vnd.github.groot-preview+json" "https://api.github.com/repos/${{github.repository.full_name}}/actions/workflows/$workflow/runs?status=in_progress")
