--- a/.github/workflows/fetch-json.yml
+++ b/.github/workflows/fetch-json.yml
@@ -13,11 +13,9 @@ jobs:
       - name: Check if Action Runs Already
         id: action
         run: |
-          releaseDate=$(date '+%B-%-d-%Y' | tr '[:upper:]' '[:lower:]')
-          echo $releaseDate
-          workflow=$(echo "${{ github.workflow }}" | cut -d/ -f3)
-          echo "https://api.github.com/repos/${{github.repository.full_name}}/actions/workflows/$workflow/runs?status=in_progress"
-          runs=$(curl -H "Accept: application/vnd.github.groot-preview+json" "https://api.github.com/repos/${{github.repository.full_name}}/actions/workflows/$workflow/runs?status=in_progress")
+          workflow=$(echo "${{ github.event.workflow }}" | cut -d/ -f3)
+          echo "https://api.github.com/repos/${{github.repository}}/actions/workflows/$workflow/runs?status=in_progress"
+          runs=$(curl -H "Accept: application/vnd.github.groot-preview+json" "https://api.github.com/repos/${{github.repository}}/actions/workflows/$workflow/runs?status=in_progress")
           count=$(jq ".[0].total_count" <<< "$runs")
           echo "$count"
           echo "::set-output name=count::$count"
