--- a/.github/workflows/fetch-json.yml
+++ b/.github/workflows/fetch-json.yml
@@ -16,7 +16,7 @@ jobs:
           workflow=$(echo "${{ github.event.workflow }}" | cut -d/ -f3)
           echo "https://api.github.com/repos/${{github.repository}}/actions/workflows/$workflow/runs?status=in_progress"
           runs=$(curl -H "Accept: application/vnd.github.groot-preview+json" "https://api.github.com/repos/${{github.repository}}/actions/workflows/$workflow/runs?status=in_progress")
-          count=$(jq ".[0].total_count" <<< "$runs")
+          count=$(jq ".total_count" <<< "$runs")
           echo "$count"
           echo "::set-output name=count::$count"
 
