--- a/.chglog/config.yml
+++ b/.chglog/config.yml
@@ -2,7 +2,7 @@ style: github
 template: CHANGELOG.tpl.md
 info:
   title: CHANGELOG
-  repository_url: https://github.com/bcgov/sso-terraform-keycloak-client
+  repository_url: https://github.com/junminahn/testteste
 options:
   commits:
     sort_by: Type
