--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -17,6 +17,7 @@ jobs:
       packages: write
 
     steps:
+      - uses: hmarr/debug-action@v2
       - uses: actions/checkout@v2
 
       - name: Log in to the GitHub Container registry
