--- a/.github/workflows/prepare-release.yaml
+++ b/.github/workflows/prepare-release.yaml
@@ -21,9 +21,13 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('**/.tool-versions') }}
       - name: Install required tools
         run: |
-          sed -nr '/git-chglog|semtag/p' .tool-versions | cut -f 1 -d ' ' | xargs -n 1 asdf plugin-add || true
-          asdf plugin-update --all
-          asdf install
+          while IFS= read -r line; do
+              tool=$(echo $line | cut -f 1 -d ' ')
+              vers=$(echo $line | cut -f 2 -d ' ')
+              asdf plugin-add $tool $vers
+              asdf install $tool $vers
+              asdf plugin-update $tool
+          done <<< $(sed -nr '/git-chglog|semtag/p' .tool-versions)
           asdf reshim
 
       - name: Version Bump
