--- a/.github/workflows/prepare-release.yaml
+++ b/.github/workflows/prepare-release.yaml
@@ -24,7 +24,7 @@ jobs:
           while IFS= read -r line; do
               tool=$(echo $line | cut -f 1 -d ' ')
               vers=$(echo $line | cut -f 2 -d ' ')
-              asdf plugin-add $tool
+              asdf plugin-add $tool || true
               asdf install $tool $vers
               asdf plugin-update $tool
           done <<< $(sed -nr '/git-chglog|semtag/p' .tool-versions)
