--- a/.github/workflows/prepare-release.yaml
+++ b/.github/workflows/prepare-release.yaml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - uses: hmarr/debug-action@v2
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Install asdf
         uses: asdf-vm/actions/setup@v1
