--- a/docker/maintenance-page/nginx.conf
+++ b/docker/maintenance-page/nginx.conf
@@ -1,7 +1,6 @@
+# see https://hub.docker.com/_/nginx `Running nginx as a non-root user`
 worker_processes  auto;
 
-access_log  off;
-error_log   off;
 pid        /tmp/nginx.pid;
 
 events {
@@ -32,6 +31,8 @@ http {
     server {
         listen       8080;
         server_name  localhost;
+        access_log   off;
+        error_log    off;
 
         add_header cross-origin-embedder-policy "require-corp";
         add_header cross-origin-opener-policy "same-origin";
