--- a/docker/maintenance-page/nginx.conf
+++ b/docker/maintenance-page/nginx.conf
@@ -31,8 +31,8 @@ http {
     server {
         listen       8080;
         server_name  localhost;
-        access_log   off;
-        error_log    off;
+        # access_log   off;
+        # error_log    off;
 
         add_header cross-origin-embedder-policy "require-corp";
         add_header cross-origin-opener-policy "same-origin";
