--- a/docker/maintenance-page/nginx.conf
+++ b/docker/maintenance-page/nginx.conf
@@ -32,7 +32,8 @@ http {
         listen       8080;
         server_name  localhost;
         # access_log   off;
-        # error_log    off;
+        access_log  /dev/null   crit;
+        error_log   /dev/null   crit;
 
         add_header cross-origin-embedder-policy "require-corp";
         add_header cross-origin-opener-policy "same-origin";
