--- a/docker/maintenance-page/nginx.conf
+++ b/docker/maintenance-page/nginx.conf
@@ -31,9 +31,11 @@ http {
     server {
         listen       8080;
         server_name  localhost;
-        # access_log   off;
-        access_log  /dev/null   crit;
-        error_log   /dev/null   crit;
+
+        # `off` 
+        access_log   off;
+        access_log  /dev/null;
+        error_log   /dev/null;
 
         add_header cross-origin-embedder-policy "require-corp";
         add_header cross-origin-opener-policy "same-origin";
