--- a/.github/workflows/keycloak-wellknown.yml
+++ b/.github/workflows/keycloak-wellknown.yml
@@ -12,6 +12,7 @@ jobs:
       uses: fjogeleit/http-request-action@v1
       with:
         url: 'https://dev.loginproxy.gov.bc.ca/auth/realms/standard/.well-known/openid-configuration'
+        method: 'GET'
     - name: Show Response
       run: |
         echo ${{ steps.fetch.outputs.response }}
