--- a/.github/workflows/keycloak-wellknown.yml
+++ b/.github/workflows/keycloak-wellknown.yml
@@ -26,5 +26,5 @@ jobs:
         method: 'GET'
     - name: Show Response
       run: |
-        echo ${{ steps.fetch2.outputs.response }}
-        echo ${{ toJSON('{"name":"myname", "password":steps.fetch2.outputs.response}') }}
+        TEST=$(jq --null-input --arg name "myname" --arg password ${{ steps.fetch2.outputs.response }} '{"name": $name, "password": $password}')
+        echo ${{ toJSON("$TEST") }}
