--- a/.github/workflows/keycloak-wellknown.yml
+++ b/.github/workflows/keycloak-wellknown.yml
@@ -26,7 +26,7 @@ jobs:
         method: 'GET'
     - name: Show Response
       run: |
-        AA=${{ steps.fetch2.outputs.response }}
+        AA=${{ toJSON(steps.fetch2.outputs.response) }}
         TEST=$(jq --null-input --arg name "myname" --argjson password "$AA"  '{"name": $name, "password": $password}')
         echo "$TEST"
 
