--- a/.github/workflows/keycloak-wellknown.yml
+++ b/.github/workflows/keycloak-wellknown.yml
@@ -26,7 +26,8 @@ jobs:
         method: 'GET'
     - name: Show Response
       run: |
+        issuer=${{ fromJson(steps.fetch.outputs.response).issuer }}
         AA=${{ toJSON(steps.fetch2.outputs.response) }}
-        TEST=$(jq --null-input --arg name "myname" --argjson password "$AA"  '{"name": $name, "password": $password}')
+        TEST=$(jq --null-input --arg issuer "$issuer" --argjson jwks "$AA"  '{"issuer": $issuer, "jwks": $jwks}')
         echo "$TEST"
 
