--- a/.github/workflows/keycloak-wellknown.yml
+++ b/.github/workflows/keycloak-wellknown.yml
@@ -7,27 +7,5 @@ jobs:
   wellknown:
     runs-on: ubuntu-latest
     steps:
-    - name: Fetch Well-Known
-      id: fetch
-      uses: fjogeleit/http-request-action@v1
-      with:
-        url: 'https://dev.loginproxy.gov.bc.ca/auth/realms/standard/.well-known/openid-configuration'
-        method: 'GET'
-    - name: Show Response
-      run: |
-        echo ${{ steps.fetch.outputs.response }}
-        echo ${{ steps.fetch.outputs.headers }}
-        echo ${{ fromJson(steps.fetch.outputs.response).jwks_uri }}
-    - name: Fetch JWKS
-      id: fetch2
-      uses: fjogeleit/http-request-action@v1
-      with:
-        url: ${{ fromJson(steps.fetch.outputs.response).jwks_uri }}
-        method: 'GET'
-    - name: Show Response
-      run: |
-        issuer=${{ fromJson(steps.fetch.outputs.response).issuer }}
-        jwks=${{ toJSON(steps.fetch2.outputs.response) }}
-        TEST=$(jq -c --null-input --arg issuer "$issuer" --argjson jwks "$jwks"  '{"issuer": $issuer, "jwks": $jwks}')
-        echo "$TEST"
-
+      - name: wellknown
+        uses: ./.github/actions/wellknown
