--- a/.github/workflows/keycloak-wellknown.yml
+++ b/.github/workflows/keycloak-wellknown.yml
@@ -7,5 +7,6 @@ jobs:
   wellknown:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: wellknown
         uses: ./.github/actions/wellknown
