--- a/.github/actions/wellknown/action.yml
+++ b/.github/actions/wellknown/action.yml
@@ -1,34 +1,38 @@
 name: Keycloak Well-Known
 description: "Fetch Keycloak OIDC configuration"
 
+inputs:
+  discovery-url:
+    description: "The OIDC Discovery URL"
+    required: true
+
+outputs:
+  config:
+    description: "The configuration pulled from the Discovery URL"
+    value: ${{ steps.config.outputs.JSON }}
+
 runs:
   using: composite
   steps:
     - name: Fetch Well-Known
-      id: fetch
+      id: oidc
       uses: fjogeleit/http-request-action@v1
       with:
-        url: "https://dev.loginproxy.gov.bc.ca/auth/realms/standard/.well-known/openid-configuration"
+        url: ${{ inputs.discovery-url }}
         method: "GET"
-
-    - name: Show Response
-      run: |
-        echo ${{ steps.fetch.outputs.response }}
-        echo ${{ steps.fetch.outputs.headers }}
-        echo ${{ fromJson(steps.fetch.outputs.response).jwks_uri }}
-      shell: bash
 
     - name: Fetch JWKS
-      id: fetch2
+      id: jwks
       uses: fjogeleit/http-request-action@v1
       with:
-        url: ${{ fromJson(steps.fetch.outputs.response).jwks_uri }}
+        url: ${{ fromJson(steps.oidc.outputs.response).jwks_uri }}
         method: "GET"
 
-    - name: Show Response
+    - name: Build JSON config
+      id: config
       run: |
-        issuer=${{ fromJson(steps.fetch.outputs.response).issuer }}
-        jwks=${{ toJSON(steps.fetch2.outputs.response) }}
-        TEST=$(jq -c --null-input --arg issuer "$issuer" --argjson jwks "$jwks"  '{"issuer": $issuer, "jwks": $jwks}')
-        echo "$TEST"
+        issuer=${{ fromJson(steps.oidc.outputs.response).issuer }}
+        jwks=${{ toJSON(steps.jwks.outputs.response) }}
+        json=$(jq -c --null-input --arg issuer "$issuer" --argjson jwks "$jwks"  '{"issuer": $issuer, "jwks": $jwks}')
+        echo "JSON=$json" >> $GITHUB_OUTPUT
       shell: bash
