--- a/.github/workflows/keycloak-wellknown.yml
+++ b/.github/workflows/keycloak-wellknown.yml
@@ -15,4 +15,4 @@ jobs:
           discovery-url: https://dev.loginproxy.gov.bc.ca/auth/realms/standard/.well-known/openid-configuration
 
       - run: |
-          echo {{ steps.wellknown.outputs.config }}
+          echo ${{ steps.wellknown.outputs.config }}
