--- a/.github/workflows/keycloak-wellknown.yml
+++ b/.github/workflows/keycloak-wellknown.yml
@@ -12,7 +12,8 @@ jobs:
         id: wellknown
         uses: ./.github/actions/wellknown
         with:
-          discovery-url: https://dev.loginproxy.gov.bc.ca/auth/realms/standard/.well-known/openid-configuration
+          discovery-url: https://dev.loginasdfproxy.gov.bc.ca/auth/realms/standard/.well-known/openid-configuratiasdfon
+        continue-on-error: true
 
       - run: |
           echo ${{ steps.wellknown.outputs.config }}
