--- a/.github/workflows/keycloak-wellknown.yml
+++ b/.github/workflows/keycloak-wellknown.yml
@@ -13,10 +13,11 @@ jobs:
         uses: ./.github/actions/wellknown
         with:
           discovery-url: https://dev.loginproxy.gov.bc.ca/auth/realms/standard/.well-known/openid-configuration
-        continue-on-error: true
 
       - name: testtest
         run: |
           cat >"ci.auto.tfvars" <<EOF
-          app_url="${{ steps.wellknown.outputs.config }}"
+          secret1="${{ secrets.GITHUB_TOKEN }}"
+          config="${{ steps.wellknown.outputs.config }}"
+          secret2="${{ secrets.GITHUB_TOKEN }}"
           EOF
