--- a/.github/actions/array-test/action.yml
+++ b/.github/actions/array-test/action.yml
@@ -13,6 +13,8 @@ runs:
         arr=$'${{ inputs.array }}'
         for i in "${arr[@]}"
         do
+          echo "==============="
           echo "$i"
+          echo "==============="
         done
       shell: bash
