--- a/.github/actions/array-test/action.yml
+++ b/.github/actions/array-test/action.yml
@@ -11,7 +11,8 @@ runs:
     - name: Debug
       run: |
         arr=$'${{ inputs.array }}'
-        for i in "${arr[@]}"
+        y=(${arr//$'\n'/ })
+        for i in "${y[@]}"
         do
           echo "==============="
           echo "$i"
