--- a/.github/actions/array-test/action.yml
+++ b/.github/actions/array-test/action.yml
@@ -16,6 +16,7 @@ runs:
         do
           echo "==============="
           echo "$i"
+          echo ${#i}
           echo "==============="
         done
       shell: bash
