--- a/.github/workflows/array-test.yml
+++ b/.github/workflows/array-test.yml
@@ -9,11 +9,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/array-test
         with:
-          array: value     3333     23232323     111111
+          array: docker helm static
       - uses: ./.github/actions/array-test
         with:
           array: |
-            value   
-            3333   
-            23232323   
-            111111   
+            docker
+            helm
+            static
